--- a/src/main/resources/templates/jk/seller/join.html
+++ b/src/main/resources/templates/jk/seller/join.html
@@ -9,10 +9,24 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <style>
+        /* Chrome, Safari, Edge, Opera */
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        /* Firefox  */
+        input[type='number'] {
+            -moz-appearance: textfield;
+        }
+    </style>
 </head>
 
 <body style="margin-top: 60px">
-    <div style="width: 560px; margin: 0 auto; padding: 45px; padding-bottom: 30px; border: 1px solid #e2e2e2; background-color:rgb(255, 255, 255); border-radius: 0.7rem;">
+    <div
+        style="width: 560px; margin: 0 auto; padding: 45px; padding-bottom: 30px; border: 1px solid #e2e2e2; background-color:rgb(255, 255, 255); border-radius: 0.7rem;">
         <div class="text-center">
             <img th:src="@{/images/jk/logo1.png}" name="soboon" style="height: 150px;">
             <br />
@@ -22,27 +36,28 @@
                 <div class="col-sm">
                     <hr />
                     <div class="form-floating mb-2">
-                        <input type="text" id="id" name="no" value="1234" class="form-control" onkeyup="ajaxIDCheck(this)"> <label
-                            for="id" id="lbl_check" class="form-label">사업자번호 (아이디)</label>
+                        <input type="text" id="id" name="no" value="1234" class="form-control"
+                            onblur="ajaxIDCheck(this)"> <label for="id" id="lbl_check" class="form-label">사업자번호
+                            (아이디)</label>
                     </div>
                     <div class="form-floating mb-2">
-                        <input type="password" id="pw" name="pw" class="form-control" required value="123" /> <label for="pw"
-                            id="lbl_pwCheck" class="form-label" >암호</label>
+                        <input type="password" id="pw" name="pw" class="form-control" required value="123" /> <label
+                            for="pw" id="lbl_pw" class="form-label">암호</label>
                     </div>
                     <div class="form-floating mb-2">
-                        <input type="password" id="pw1" class="form-control" value="123" required />
-                        <label for="pw1" id="lbl_pwCheck" class="form-label" >암호재확인</label>
+                        <input type="password" id="pw1" class="form-control" value="123" required onkeyup="pwCheck()" />
+                        <label for="pw1" id="lbl_pwCheck" class="form-label">암호재확인</label>
                     </div>
                     <div class="form-floating mb-2">
-                        <input type="text" id="name" name="name" class="form-control" value="테스트업체1" required /> <label for="name"
-                            class="form-label" >업체명</label>
+                        <input type="text" id="name" name="name" class="form-control" value="테스트업체1" required /> <label
+                            for="name" class="form-label">업체명</label>
                     </div>
                     <div class="form-floating mb-2">
                         <input type="number" id="phone" name="phone" value="01000000000" class="form-control" />
-                        <label for="phone" class="form-label" >연락처 ( "-"는 생략 )</label>
+                        <label for="phone" class="form-label">연락처 ( "-"는 생략 )</label>
                     </div>
                     <div class="form-floating mb-2">
-                        <input type="email" id="email" name="email" class="form-control" value="test@test"/>
+                        <input type="email" id="email" name="email" class="form-control" value="test@test" />
                         <label for="email" class="form-label">이메일</label>
                     </div>
                     <hr />
@@ -67,7 +82,7 @@
                     <hr />
                     <div class="container text-center d-grid gap-2" style="padding: 0;">
                         <!-- 여기서 type을 submit으로 잡고 유효성 검사를 하게되면 강제로 데이터가 넘어가기 때문에 button으로 지정해주어야 함! -->
-                        <input type="button" value="가입하기" class="btn btn-dark" onclick="joinAction()" /> 
+                        <input type="button" value="가입하기" class="btn btn-dark" onclick="joinAction()" />
                         <a th:href="@{/seller/login.do}" class="btn btn-outline-secondary">로그인 화면으로</a>
                     </div>
                 </div>
@@ -86,9 +101,12 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- axios -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"></script>
+    <!-- Daum 주소찾기 CDN -->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
-    <script>
+    <script th:inline="javascript">
+
+
         function joinAction() {
             //변수에 담아주기
             var id = document.getElementById("id");
@@ -104,6 +122,12 @@
                 alert("아이디를 입력해주세요.");
                 id.focus(); //focus(): 커서가 깜빡이는 현상, blur(): 커서가 사라지는 현상
                 return false; //return: 반환하다 return false:  아무것도 반환하지 말아라 아래 코드부터 아무것도 진행하지 말것
+            };
+
+            if (id.value.length <= 9) { // 사업자번호가 10자리인지
+                alert("사업자번호가 너무 짧습니다. 다시 확인해주세요.");
+                id.focus();
+                return false;
             };
 
             if (pw.value == "") { // 암호가 입력됐는지
@@ -150,8 +174,52 @@
                 sample6_postcode.focus();
                 return false;
             }
+
+            alert("회원가입이 완료되었습니다.\n새로가입한 정보로 로그인해주세요.");
             //입력 값 전송
             form.submit(); //유효성 검사의 포인트   
+        }
+
+
+        async function ajaxIDCheck(e) {
+            // console.log(e.value);
+            if (e.value.length > 0) {
+                // rest api 호출
+                let url = /*[[@{/api/selleridcheck.json}]]*/""
+                url += `?id=${e.value}`;
+
+                // console.log(url);
+                const headers = { "Content-Type": "application/json" };
+                const { data } = await axios.get(url, { headers });
+                // console.log(data);
+
+                if (data.chk === 1) {
+                    idcheck = 0;
+                    document.getElementById("lbl_check").innerText = '이미 사용중인 사업자번호입니다!';
+                    document.getElementById("lbl_check").style.color = 'red';
+                    document.getElementById("id").className = 'form-control is-invalid';
+                }
+                if (data.chk === 0) {
+                    document.getElementById("lbl_check").innerText = '사업자번호 (아이디)';
+                    document.getElementById("lbl_check").style.color = 'gray';
+                    document.getElementById("id").className = 'form-control';
+                }
+            }
+        }
+
+        // 비밀번호 확인
+        const pwCheck = () => {
+            const pw = document.getElementById("pw");
+            const pw1 = document.getElementById("pw1");
+
+            if (pw.value !== pw1.value) {
+                document.getElementById("lbl_pwCheck").innerText = "암호가 일치하지 않습니다.";
+                document.getElementById("lbl_pwCheck").style.color = 'red';
+            }
+            else {
+                document.getElementById("lbl_pwCheck").innerText = "암호가 일치합니다.";
+                document.getElementById("lbl_pwCheck").style.color = 'blue';
+            }
         }
 
 
