--- a/src/main/resources/templates/jk/seller/header.html
+++ b/src/main/resources/templates/jk/seller/header.html
@@ -62,11 +62,11 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li>
-                            <form th:action="@{/logout.do}" method="post">
-                                <a class="dropdown-item" >로그아웃</a>
-                            </form>
-                        </li>
+
+                        <form th:action="@{/logout.do}" method="post">
+                            <li><input class="dropdown-item">로그아웃</a></li>
+                        </form>
+
                     </ul>
                 </li>
             </ul>
