--- a/src/main/resources/static/css/km/noneed_order/checkoutstyle.css
+++ b/src/main/resources/static/css/km/noneed_order/checkoutstyle.css
@@ -134,7 +134,7 @@ ol {
 	padding-bottom: 100px;
 }
 
-.text-white h1,
+/* .text-white h1,
 .text-white h2,
 .text-white h3,
 .text-white h4,
@@ -145,7 +145,7 @@ ol {
 .text-white li,
 .text-white a {
 	color: #fff;
-}
+} */
 
 /* buttons */
 
@@ -205,7 +205,8 @@ ol {
 
 .checkout__form .checkout__form__input input {
 	height: 50px;
-	width: 100%;
+	/* width: 100%; */
+	width: 100px;
 	border: 1px solid #e1e1e1;
 	border-radius: 2px;
 	margin-bottom: 15px;
@@ -292,12 +293,12 @@ ol {
 	margin-bottom: 0;
 }
 
-.checkout__order__product ul li span {
+/* .checkout__order__product ul li span {
 	font-size: 14px;
 	color: #111111;
 	font-weight: 600;
 	float: right;
-}
+} */
 
 .checkout__order__product ul li .top__text {
 	font-size: 16px;
@@ -305,13 +306,13 @@ ol {
 	font-weight: 600;
 	float: left;
 }
-
+/* 
 .checkout__order__product ul li .top__text__right {
 	font-size: 16px;
 	color: #111111;
 	font-weight: 600;
 	float: right;
-}
+} */
 
 .checkout__order__total {
 	padding-top: 12px;
@@ -329,12 +330,12 @@ ol {
 	line-height: 40px;
 }
 
-.checkout__order__total ul li span {
+/* .checkout__order__total ul li span {
 	color: #000000;
 	float: right;
 	font-weight: 900;
-}
-
+} */
+/* 
 .checkout__order__widget {
 	padding-bottom: 10px;
 }
@@ -353,5 +354,5 @@ ol {
 .checkout__order__widget label input {
 	position: absolute;
 	visibility: hidden;
-}
+} */
 
